--- a/questone-api-server/build.gradle
+++ b/questone-api-server/build.gradle
@@ -5,11 +5,15 @@ buildscript {
     
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:$kotlin_version"
     }
 }
 
 apply plugin: 'kotlin'
 apply plugin: 'application'
+apply plugin: 'kotlinx-serialization'
+
+
 
 group 'dev.hyperhunt.kotlin-todo-quest.questone'
 version '0.0.1'
@@ -41,4 +45,9 @@ dependencies {
     implementation "io.ktor:ktor-client-apache:$ktor_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
     implementation "com.eclipsesource.minimal-json:minimal-json:0.9.5"
+    compile 'io.javalin:javalin:3.12.0'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+//    implementation("org.jetbrains.kotlinx:kotlinx-serialization-core:1.0.1")
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-runtime:0.20.0"
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.0.1'
 }
